<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="409dp"
    android:layout_height="729dp"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:background="@drawable/background3"
    android:fillViewport="true"
    tools:context=".SubmitJobsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"


        >

        <TextView
            android:id="@+id/title"
            android:layout_width="56dp"
            android:layout_height="29dp"
            android:layout_marginTop="53dp"
            android:text="Post Job"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Submit_job_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="13dp"
            android:text="Submit Job"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/salary"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="329dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/date"
            android:layout_width="88dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="date"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/duration"
            app:layout_constraintEnd_toStartOf="@+id/Submit_job_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <EditText
            android:id="@+id/Place"
            android:layout_width="272dp"
            android:layout_height="82dp"
            android:layout_marginTop="126dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="126dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/date"
            app:layout_constraintEnd_toEndOf="@+id/Description"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Place"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/Place"
            app:layout_constraintStart_toStartOf="@+id/Description" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Description"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/Job_type"
            app:layout_constraintTop_toBottomOf="@+id/Job_type" />

        <EditText
            android:id="@+id/Description"
            android:layout_width="274dp"
            android:layout_height="80dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="27dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/Job_type" />

        <EditText
            android:id="@+id/salary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/duration"
            app:layout_constraintEnd_toEndOf="@+id/emergency_select"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="42dp"
            android:text="Salary"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/duration"
            app:layout_constraintEnd_toEndOf="@+id/Description"
            app:layout_constraintStart_toStartOf="@+id/emergency_select" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:text="Job Type"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/Job_type"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Job_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/emergency_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="Date"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="43dp"
            android:text="Duration"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/duration"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

        <EditText
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="33dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/Submit_job_button"
            app:layout_constraintEnd_toStartOf="@+id/salary"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="@+id/textView18" />

        <CheckBox
            android:id="@+id/emergency_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:text="emergency"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Job_type"
            app:layout_constraintTop_toTopOf="@+id/Job_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>