<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitJobsActivity">

    <TextView
        android:id="@+id/recommendedEmployeeUS2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recommended Employees"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popUpRecycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recommendedEmployeeUS2"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:clipToPadding="false"
        android:textSize="18sp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        tools:listitem="@layout/activity_job_postings_page" />

    <Button
        android:id="@+id/popUpClosedButton"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_below="@+id/popUpRecycleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="close" />

</RelativeLayout>



